--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
-    <link rel="dtylesheet" href="styles/architects.css">
+    <link rel="stylesheet" href="styles/architects.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
+        <nav class="navbar"></nav>
+        <h3 class="brand">G3 Architects</h3>
 
     </header>
     <main>
