--- a/index.html
+++ b/index.html
@@ -54,6 +54,47 @@
 
         </section>
 
+<!-- features section -->
+        <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> Love & Enjoy</h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, molestias. Adipisci debitis voluptatum, error sint voluptates, ipsam impedit et blanditiis repellat nostrum facere qui aperiam harum, deserunt iste distinctio! Harum.</p>
+
+                <!-- Feature card container -->
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & mobile version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In rem possimus ducimus iure! Quod esse rerum natus, vel provident dicta......</p>
+
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & mobile version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In rem possimus ducimus iure! Quod esse rerum natus, vel provident dicta......</p>
+
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & mobile version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In rem possimus ducimus iure! Quod esse rerum natus, vel provident dicta......</p>
+
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Desktop & mobile version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In rem possimus ducimus iure! Quod esse rerum natus, vel provident dicta......</p>
+
+                </div>
+
+            </div>
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+Years</span>
+
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+
+        </section>
+
         <!-- Some Facts-->
         <section>
             <h3 class="section-title">Some Facts</h3>
